--- a/WindowWatchApp.Avalonia/Views/MainWindow.axaml
+++ b/WindowWatchApp.Avalonia/Views/MainWindow.axaml
@@ -5,9 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:WindowWatchApp.Avalonia.Views"
         mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="450"
+	    CanResize="False"
 		Width="400" Height="450"
         x:Class="WindowWatchApp.Avalonia.Views.MainWindow"
-        Icon="/Assets/avalonia-logo.ico"
+        Icon="/Assets/logo.ico"
         Title="WindowWatchApp.Avalonia">
         <views:MainView />
 </Window>
