--- a/WindowWatchApp.Avalonia/Views/MainWindow.axaml
+++ b/WindowWatchApp.Avalonia/Views/MainWindow.axaml
@@ -9,6 +9,6 @@
 		Width="400" Height="450"
         x:Class="WindowWatchApp.Avalonia.Views.MainWindow"
         Icon="/Assets/logo.ico"
-        Title="WindowWatchApp.Avalonia">
+        Title="WINDOW WATCH APP">
         <views:MainView />
 </Window>
